Update swagger generated client calls
