# lawless/src/main/resources/swagger-ui/swagger.json
@@ -169,10 +169,11 @@
         "description" : "",
         "operationId" : "details",
         "parameters" : [ {
-          "name" : "",
+          "name" : "id",
           "in" : "query",
           "required" : true,
-          "type" : "ref"
+          "type" : "integer",
+          "format" : "int64"
         } ],
         "responses" : {
           "200" : {
@@ -200,6 +201,29 @@
         }
       }
     },
+    "/api/caff/picture" : {
+      "get" : {
+        "tags" : [ "Caff" ],
+        "summary" : "Get Caff preview picture",
+        "description" : "",
+        "operationId" : "picture",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "query",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/CaffPictureResponse"
+            }
+          }
+        }
+      }
+    },
     "/api/caff/update" : {
       "post" : {
         "tags" : [ "Caff" ],
@@ -211,29 +235,7 @@
           "name" : "body",
           "required" : false,
           "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "in" : "body",
-          "name" : "body",
-          "required" : false,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "in" : "body",
-          "name" : "body",
-          "required" : false,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "in" : "body",
-          "name" : "body",
-          "required" : false,
-          "schema" : {
-            "type" : "number",
-            "format" : "double"
+            "$ref" : "#/definitions/UpdateCaffReq"
           }
         } ],
         "responses" : {
@@ -248,6 +250,15 @@
     }
   },
   "definitions" : {
+    "CaffPictureResponse" : {
+      "type" : "object",
+      "properties" : {
+        "previewPicture" : {
+          "type" : "string",
+          "format" : "byte"
+        }
+      }
+    },
     "Comment" : {
       "type" : "object",
       "properties" : {
@@ -347,10 +358,6 @@
             "$ref" : "#/definitions/Comment"
           }
         },
-        "previewPicture" : {
-          "type" : "string",
-          "format" : "byte"
-        },
         "userPersonalData" : {
           "$ref" : "#/definitions/UserPersonalData"
         }
@@ -412,6 +419,25 @@
         "name" : {
           "type" : "string",
           "enum" : [ "ROLE_USER", "ROLE_ADMIN" ]
+        }
+      }
+    },
+    "UpdateCaffReq" : {
+      "type" : "object",
+      "properties" : {
+        "caffId" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "name" : {
+          "type" : "string"
+        },
+        "description" : {
+          "type" : "string"
+        },
+        "price" : {
+          "type" : "number",
+          "format" : "double"
         }
       }
     },
